--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
-
 <head>
     <link rel="icon" type="image/svg+xml"
-        href="%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' stroke='%23000' stroke-width='2'%3E%3Cpath d='M0 0h24v24H0z' stroke='none'/%3E%3Cpath fill='%23fff' d='M12 21a9 9 0 0 1 0-18c4.97 0 9 3.582 9 8 0 1.06-.474 2.078-1.318 2.828-.844.75-1.989 1.172-3.182 1.172H14a2 2 0 0 0-1 3.75A1.3 1.3 0 0 1 12 21'/%3E%3Cpath stroke='red' d='M7.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%230f0' d='M11.5 7.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%2300f' d='M15.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3C/svg%3E" />
+        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' stroke='%23000' stroke-width='2'%3E%3Cpath d='M0 0h24v24H0z' stroke='none'/%3E%3Cpath fill='%23fff' d='M12 21a9 9 0 0 1 0-18c4.97 0 9 3.582 9 8 0 1.06-.474 2.078-1.318 2.828-.844.75-1.989 1.172-3.182 1.172H14a2 2 0 0 0-1 3.75A1.3 1.3 0 0 1 12 21'/%3E%3Cpath stroke='red' d='M7.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%230f0' d='M11.5 7.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%2300f' d='M15.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3C/svg%3E" />
     <title>HEX RGB &#8594; HEX CMYK</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="height=device-height, initial-scale=1.0">
@@ -298,7 +297,6 @@
             representation.style.animation = 'none';
             representation.style.background = 'none';
             representation.style.backgroundColor = hexa;
-
         }
 
         function calculate_hexcmyk_to_deccmyk() {
@@ -454,17 +452,20 @@
             var m = document.getElementById("M").value;
             var y = document.getElementById("Y").value;
             var k = document.getElementById("K").value;
+
             if (c == null || isNaN(c) || c == '' || c < 0) { c = 0; document.getElementById("C").value = 0; }
             if (m == null || isNaN(m) || m == '' || m < 0) { m = 0; document.getElementById("M").value = 0; }
             if (y == null || isNaN(y) || y == '' || y < 0) { y = 0; document.getElementById("Y").value = 0; }
             if (k == null || isNaN(k) || k == '' || k < 0) { k = 0; document.getElementById("K").value = 0; }
+
             if (c > 100) { c = 100; document.getElementById("C").value = 100; }
             if (m > 100) { m = 100; document.getElementById("M").value = 100; }
             if (y > 100) { m = 100; document.getElementById("Y").value = 100; }
             if (k > 100) { k = 100; document.getElementById("K").value = 100; }
 
             k = Math.min(k, 100);
-            document.getElementById("HEXCMYK").value = String(decimalToHexString(Math.round(c / 100 * 255)));
+
+            document.getElementById("HEXCMYK").value  = String(decimalToHexString(Math.round(c / 100 * 255)));
             document.getElementById("HEXCMYK").value += String(decimalToHexString(Math.round(m / 100 * 255)));
             document.getElementById("HEXCMYK").value += String(decimalToHexString(Math.round(y / 100 * 255)));
             document.getElementById("HEXCMYK").value += String(decimalToHexString(Math.round(k / 100 * 255)));
@@ -478,12 +479,6 @@
             if (number < 0) number = 0xFFFFFFFF + number + 1;
             return number.toString(16).toUpperCase().padStart(2, '0');
         }
-
-        function HexStringtodecimal(number) {
-            return parseInt(number, 16);
-        }
-
     </script>
 </body>
-
 </html>
