--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' stroke='%23000' stroke-width='2'%3E%3Cpath d='M0 0h24v24H0z' stroke='none'/%3E%3Cpath fill='%23fff' d='M12 21a9 9 0 0 1 0-18c4.97 0 9 3.582 9 8 0 1.06-.474 2.078-1.318 2.828-.844.75-1.989 1.172-3.182 1.172H14a2 2 0 0 0-1 3.75A1.3 1.3 0 0 1 12 21'/%3E%3Cpath stroke='red' d='M7.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%230f0' d='M11.5 7.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%2300f' d='M15.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3C/svg%3E" />
@@ -205,12 +204,64 @@
         .modified {
             background-color: #eee;
         }
+
+        .modal {
+            display: flex;  
+            visibility: hidden;  
+            opacity: 0;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+            transition: opacity 0.2s;
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px 25px;
+            border: 1px solid #888;
+            width: 50%;
+            border-radius: 5px;
+            box-shadow: 2px 2px 10px #3336;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            margin-top: -0.5rem;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        #infobtn {
+            cursor: pointer;
+            font-size: 0.9rem;
+            margin-left: 0.2rem;
+            color: #fff;
+            background-color: #999;
+            border-radius: 50%;
+            width: 1rem;
+            line-height: 1rem;
+            vertical-align: 2px;
+            display: inline-block;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>Color Converter</h1>
+        <h1>Color Converter <span id="infobtn">?</span></h1>
         <div class="section" id="hex_rgb">
             <label>HEX RGB</label>
             <input type="text" id="HEXRGB" value="000000">
@@ -219,26 +270,19 @@
         <div class="section" id="dec_rgb">
             <label>DEC RGB</label>
             <div class="input-group">
-                <input type="number" id="R" value="0" class="rgb" pattern="[0-9]*" min="0" max="255"
-                    inputmode="decimal">
-                <input type="number" id="G" value="0" class="rgb" pattern="[0-9]*" min="0" max="255"
-                    inputmode="decimal">
-                <input type="number" id="B" value="0" class="rgb" pattern="[0-9]*" min="0" max="255"
-                    inputmode="decimal">
+                <input type="number" id="R" value="0" class="rgb" pattern="[0-9]*" min="0" max="255" inputmode="decimal">
+                <input type="number" id="G" value="0" class="rgb" pattern="[0-9]*" min="0" max="255" inputmode="decimal">
+                <input type="number" id="B" value="0" class="rgb" pattern="[0-9]*" min="0" max="255" inputmode="decimal">
             </div>
         </div>
 
         <div class="section" id="dec_cmyk">
             <label>DEC CMYK</label>
             <div class="input-group">
-                <input type="number" id="C" value="0" class="cmyk" pattern="[0-9]*" min="0" max="100"
-                    inputmode="decimal">
-                <input type="number" id="M" value="0" class="cmyk" pattern="[0-9]*" min="0" max="100"
-                    inputmode="decimal">
-                <input type="number" id="Y" value="0" class="cmyk" pattern="[0-9]*" min="0" max="100"
-                    inputmode="decimal">
-                <input type="number" id="K" value="100" class="cmyk" pattern="[0-9]*" min="0" max="100"
-                    inputmode="decimal">
+                <input type="number" id="C" value="0" class="cmyk" pattern="[0-9]*" min="0" max="100" inputmode="decimal">
+                <input type="number" id="M" value="0" class="cmyk" pattern="[0-9]*" min="0" max="100" inputmode="decimal">
+                <input type="number" id="Y" value="0" class="cmyk" pattern="[0-9]*" min="0" max="100" inputmode="decimal">
+                <input type="number" id="K" value="100" class="cmyk" pattern="[0-9]*" min="0" max="100" inputmode="decimal">
             </div>
         </div>
 
@@ -250,6 +294,19 @@
         <input type="button" value="calculate" onclick="calculate()">
         <div id="representation"></div>
     </div>
+    <div id="info" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h1>Color Converter</h1>
+          <p>Simple html/javascript page to convert color from hex rgb to hex cmyk and back</p>
+            <p>Enter any value in one of the input fields and the corresponding other fields will be calculated when you leave the field. 
+                You can also hit the Enter key or the 'calculate'-button. 
+                If you enter values outside the permitted limits, meaningful values are inserted.
+                The field below shows a representation of the entered color.</p>
+            <p>You can use this page online or you can download the html-file an use it offline.</p>
+            <p>Find the most recent code at <a target="_blank" href="https://github.com/zenziwerken/colorconverter">https://github.com/&#8203zenziwerken/&#8203colorconverter</a></p>
+        </div>
+      </div>
 
     <script>
         document.querySelectorAll('input[type="text"], input[type="number"]').forEach(input => {
@@ -483,7 +540,7 @@
 
             k = Math.min(k, 100);
 
-            document.getElementById("HEXCMYK").value  = String(decimalToHexString(Math.round(c / 100 * 255)));
+            document.getElementById("HEXCMYK").value = String(decimalToHexString(Math.round(c / 100 * 255)));
             document.getElementById("HEXCMYK").value += String(decimalToHexString(Math.round(m / 100 * 255)));
             document.getElementById("HEXCMYK").value += String(decimalToHexString(Math.round(y / 100 * 255)));
             document.getElementById("HEXCMYK").value += String(decimalToHexString(Math.round(k / 100 * 255)));
@@ -497,6 +554,21 @@
             if (number < 0) number = 0xFFFFFFFF + number + 1;
             return number.toString(16).toUpperCase().padStart(2, '0');
         }
+
+        var modal = document.getElementById("info");
+        var btn   = document.getElementById("infobtn");
+        var span  = document.getElementsByClassName("close")[0];
+        btn.onclick = function() {
+            modal.style.visibility = "visible";
+            modal.style.opacity = 1;
+        }
+
+        span.onclick = function() {
+            modal.style.visibility = 'hidden'; 
+            modal.style.opacity = 0;
+        }
+
+
     </script>
 </body>
 
