--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             padding: 20px 25px;
             border: 1px solid #888;
             width: 50%;
-            border-radius: 5px;
+            border-radius: 8px;
             box-shadow: 2px 2px 10px #3336;
         }
 
@@ -255,6 +255,20 @@
             line-height: 1rem;
             vertical-align: 2px;
             display: inline-block;
+        }
+        @media (max-width: 50em) { 
+            .modal {
+                h1 {
+                    font-size: 1rem;
+                }
+                p {
+                    font-size: 0.8rem;
+                }
+            }
+            .modal-content {
+                padding: 12px 15px;
+                width: 80%;
+            }
         }
     </style>
 </head>
