--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
             padding-bottom: 10px;
             margin: 10px 0 0 0;
         }
+        .icon {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' stroke='%23000' stroke-width='2'%3E%3Cpath d='M0 0h24v24H0z' stroke='none'/%3E%3Cpath fill='%23fff' d='M12 21a9 9 0 0 1 0-18c4.97 0 9 3.582 9 8 0 1.06-.474 2.078-1.318 2.828-.844.75-1.989 1.172-3.182 1.172H14a2 2 0 0 0-1 3.75A1.3 1.3 0 0 1 12 21'/%3E%3Cpath stroke='red' d='M7.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%230f0' d='M11.5 7.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3Cpath stroke='%2300f' d='M15.5 10.5a1 1 0 1 0 2 0 1 1 0 1 0-2 0'/%3E%3C/svg%3E");
+            display: inline-block;
+            height: 1.2em;
+            width: 1.2em;
+            vertical-align: -0.2em;
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
 
         .container {
             background-color: #ffffff;
@@ -259,10 +268,10 @@
         @media (max-width: 50em) { 
             .modal {
                 h1 {
-                    font-size: 1rem;
+                    font-size: 1.1rem;
                 }
                 p {
-                    font-size: 0.8rem;
+                    font-size: 0.9rem;
                 }
             }
             .modal-content {
@@ -275,7 +284,7 @@
 
 <body>
     <div class="container">
-        <h1>Color Converter <span id="infobtn">?</span></h1>
+        <h1><span class="icon"></span> Color Converter <span id="infobtn">?</span></h1>
         <div class="section" id="hex_rgb">
             <label>HEX RGB</label>
             <input type="text" id="HEXRGB" value="000000">
@@ -311,7 +320,7 @@
     <div id="info" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h1>Color Converter</h1>
+          <h1><span class="icon"></span> Color Converter</h1>
           <p>Simple html/javascript page to convert color from hex rgb to hex cmyk and back</p>
             <p>Enter any value in one of the input fields and the corresponding other fields will be calculated when you leave the field. 
                 You can also hit the Enter key or the 'calculate'-button. 
