--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 You can also hit the Enter key or the 'calculate'-button. 
                 If you enter values outside the permitted limits, meaningful values are inserted.
                 The field below shows a representation of the entered color.</p>
-            <p>You can use this page online or you can download the html-file an use it offline.</p>
+            <p>You can use this page online or you can download the html-file and use it offline.</p>
             <p>Find the most recent code at <a target="_blank" href="https://github.com/zenziwerken/colorconverter">https://github.com/&#8203zenziwerken/&#8203colorconverter</a></p>
         </div>
       </div>
