--- a/index.html
+++ b/index.html
@@ -265,7 +265,15 @@
             vertical-align: 2px;
             display: inline-block;
         }
+        
         @media (max-width: 50em) { 
+            body {
+                align-items: flex-start;
+                padding-top: 1rem;
+            }
+            .container {
+                margin-top: 1rem;
+            }
             .modal {
                 h1 {
                     font-size: 1.1rem;
