--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
                 If you enter values outside the permitted limits, meaningful values are inserted.
                 The field below shows a representation of the entered color.</p>
             <p>You can use this page online or you can download the html-file and use it offline.</p>
-            <p>Find the most recent code at <a target="_blank" href="https://github.com/zenziwerken/colorconverter">https://github.com/&#8203zenziwerken/&#8203colorconverter</a>
-            Icon based on <a href="https://tabler.io/icons/icon/palette">Tabler Palette</a></p>
+            <p>Find the most recent code at <a target="_blank" href="https://github.com/zenziwerken/colorconverter">https://github.com/&#8203zenziwerken/&#8203colorconverter</a><br>
+            Icon based on <a target="_blank" href="https://tabler.io/icons/icon/palette">Tabler "Palette"</a></p>
         </div>
       </div>
 
